# grangers

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  a_fake_file
.github/workflows/: release-please.yml
src/: grangers.rs  grangers_info.rs  grangers_utils.rs  lib.rs  main.rs  options.rs
src/grangers/: grangers.rs  grangers_info.rs  grangers_utils.rs  options.rs  reader.rs
src/grangers/reader/: fasta.rs  gtf.rs  reader_utils.rs
src/reader/: fasta.rs  gtf.rs
tests/: test_iterator.rs
