[package]
name = "grangers"
version = "0.2.2"
edition = "2021"
authors = [
  "Dongze He <dhe17@umd.edu>",
  "Rob Patro <rob@cs.umd.edu>",
]
description = "A rust library for working with genomic ranges and annotations."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/grangers"
homepage = "https://github.com/COMBINE-lab/grangers"
include = [
  "/src/lib.rs",
  "/src/grangers_info.rs",
  "/src/grangers_utils.rs",
  "/src/options.rs",
  "/src/reader.rs",
  "/src/reader/*.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
]
keywords = [
  "genomics",
  "GTF-GFF",
  "ranges",
  "genes",
  "genome-annotation",
]
categories = ["science", "data-structures"]

[dependencies]
anyhow = "1.0"
flate2 = { version = "1.0.26", features = ["zlib"], default-features = false }
noodles = { version = "0.44.0", features = ["gtf","gff","fasta", "core"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = true, features = ["env-filter"] }
polars = { version = "0.30", features = ["lazy","dataframe_arithmetic","sort_multiple", "checked_arithmetic","rows","dtype-struct", "dtype-categorical", "list_eval","concat_str", "strings"]}
peak_alloc = "0.2.0"
bedrs = "0.0.26"
rust-lapper = "1.1.0"
clap = { version = "4.3.11", features = ["derive", "cargo", "deprecated", "wrap_help", "help", "usage", "error-context"] } 
